Edição de setores e cargos

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -51,3 +51,9 @@
 .icon-admin{
     background-image: url(../images/icons/config.png)  !important;
 }
+.icon-cargos{
+    background-image: url(../images/icons/cargos.jpg)  !important;
+}
+.icon-config{
+    background-image: url(../images/icons/icon_settings.gif)  !important;
+}
