--- a/application/layouts/scripts/acesso.phtml
+++ b/application/layouts/scripts/acesso.phtml
@@ -4,13 +4,12 @@
 		content="text/html;charset=utf-8" />
 <script type="text/javascript">
     var baseUrl = '<?php echo $this->baseUrl ()?>'; 
-    var autor = "Marcone Costa";
 </script>
 <?php echo $this->headMeta ();?>
 <?php echo $this->headTitle ();?>
 <?php echo $this->headLink ()->prependStylesheet ( $this->baseUrl () . '/extjs/resources/css/ext-all.css' );?>
 <?php echo $this->headLink ()->prependStylesheet ( $this->baseUrl () . '/css/application.css' );?>
-<?php $this->headScript()->appendFile( $this->baseUrl () . '/extjs/ext-debug.js') ?>
+<?php $this->headScript()->appendFile( $this->baseUrl () . '/extjs/ext-all.js') ?>
 <?php  $this->headScript()->appendFile( $this->baseUrl () . '/javascripts/app.js') ?>
 <?php echo $this->headScript() ?>
 
