--- a/public/css/application.css
+++ b/public/css/application.css
@@ -63,3 +63,9 @@
 .icon-attach{
     background-image: url(../images/icons/attach.png)  !important;
 }
+.icon-tag{
+    background-image: url(../images/icons/tag_blue.png)  !important;
+}
+.icon-upload{
+    background-image: url(../images/icons/upload.jpg)  !important;
+}
