alterado o nome de exibição na tela de boas vindas e adicionadas as informações no painel de detalhes closes  #50

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -5,6 +5,7 @@
 <script type="text/javascript">
     var baseUrl = '<?php echo $this->baseUrl ()?>'; 
     var usuario = '<?php echo $this->usuario?>'; 
+    var nomeUsuario = '<?php echo $this->nomeUsuario?>'; 
     var env = '<?php echo APPLICATION_ENV;?>';
 </script>
 <?php echo $this->headMeta ();?>
