--- a/public/css/application.css
+++ b/public/css/application.css
@@ -117,3 +117,6 @@ td.tplDetail{
 .icon-upload-send{
     background-image: url(../images/icons/upload.jpg)  !important;
 }
+.icon-instrumentos{
+    background-image: url(../images/icons/sitemap_color.png)  !important;
+}
