--- a/application/modules/relatorio/views/scripts/index/geral.jrxml
+++ b/application/modules/relatorio/views/scripts/index/geral.jrxml
@@ -102,40 +102,40 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 	<group name="nivel">
 		<groupExpression><![CDATA[$F{p1_id}]]></groupExpression>
 		<groupHeader>
-			<band height="56">
+			<band height="48">
 				<printWhenExpression><![CDATA[$F{p1_id}!=null]]></printWhenExpression>
 				<frame>
 					<reportElement uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5" key="frame_grupo" style="grupo" mode="Opaque" x="2" y="0" width="555" height="46"/>
 					<textField isStretchWithOverflow="true">
-						<reportElement uuid="ab7f1c6c-f283-43d2-ae49-e7cb58d2ab06" style="Detail" x="1" y="0" width="551" height="15"/>
+						<reportElement uuid="ab7f1c6c-f283-43d2-ae49-e7cb58d2ab06" style="Detail" positionType="Float" x="1" y="0" width="551" height="15"/>
 						<textElement>
 							<font size="10" isBold="true" isUnderline="false"/>
 						</textElement>
 						<textFieldExpression><![CDATA[$F{p1_singular} + " - " + $F{p1_menu}]]></textFieldExpression>
 					</textField>
 					<textField isStretchWithOverflow="true">
-						<reportElement uuid="535cf34a-25f1-44ff-a670-822cee6fbaf7" style="Detail" x="0" y="27" width="550" height="12"/>
+						<reportElement uuid="535cf34a-25f1-44ff-a670-822cee6fbaf7" style="Detail" positionType="Float" x="0" y="30" width="550" height="12"/>
 						<textElement markup="html">
 							<font size="8" isBold="false"/>
 						</textElement>
 						<textFieldExpression><![CDATA[$F{p1_descricao} != null ? "Descrição: " + $F{p1_descricao} :""]]></textFieldExpression>
 					</textField>
 					<textField isStretchWithOverflow="true">
-						<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" x="373" y="14" width="166" height="12"/>
+						<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" positionType="Float" x="373" y="17" width="166" height="12"/>
 						<textElement>
 							<font size="8"/>
 						</textElement>
 						<textFieldExpression><![CDATA[$F{p1_equipe} != null ? "Equipe: " + $F{p1_equipe} : ""]]></textFieldExpression>
 					</textField>
 					<textField>
-						<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" x="0" y="14" width="188" height="12"/>
+						<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" positionType="Float" x="0" y="17" width="188" height="12"/>
 						<textElement>
 							<font size="8"/>
 						</textElement>
 						<textFieldExpression><![CDATA[$F{p1_responsavel} != null ? "Responsável: " + $F{p1_responsavel} : ""]]></textFieldExpression>
 					</textField>
 					<textField>
-						<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" x="188" y="14" width="185" height="12"/>
+						<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" positionType="Float" x="188" y="17" width="185" height="12"/>
 						<textElement>
 							<font size="8"/>
 						</textElement>
@@ -169,9 +169,9 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 		<band height="66" splitType="Stretch">
 			<printWhenExpression><![CDATA[$F{p5_id} != null]]></printWhenExpression>
 			<frame>
-				<reportElement uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5" style="Row" mode="Opaque" x="1" y="0" width="555" height="60"/>
-				<textField isStretchWithOverflow="true">
-					<reportElement uuid="ab7f1c6c-f283-43d2-ae49-e7cb58d2ab06" style="Detail" x="1" y="0" width="550" height="15"/>
+				<reportElement uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5" stretchType="RelativeToBandHeight" mode="Opaque" x="1" y="0" width="555" height="60"/>
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+					<reportElement uuid="ab7f1c6c-f283-43d2-ae49-e7cb58d2ab06" style="Detail" positionType="Float" x="1" y="0" width="550" height="15"/>
 					<textElement>
 						<font size="10" isBold="true"/>
 					</textElement>
@@ -199,20 +199,23 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 					<textFieldExpression><![CDATA[$F{p5_responsavel} != null ? "Responsável: " + $F{p5_responsavel} : ""]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" positionType="Float" x="188" y="14" width="185" height="12"/>
+					<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" positionType="Float" x="188" y="15" width="185" height="12"/>
 					<textElement>
 						<font size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{p5_supervisor} != null ? "Supervisor: " + $F{p5_supervisor} : ""]]></textFieldExpression>
 				</textField>
 				<subreport runToBottom="false">
-					<reportElement uuid="0d2cbe1d-4c7a-4a49-b692-57c543f601f8" positionType="Float" x="3" y="43" width="536" height="14"/>
+					<reportElement uuid="0d2cbe1d-4c7a-4a49-b692-57c543f601f8" positionType="Float" x="3" y="42" width="548" height="14"/>
 					<subreportParameter name="programacao_id">
 						<subreportParameterExpression><![CDATA[$F{p5_id}]]></subreportParameterExpression>
 					</subreportParameter>
 					<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "geral_financeiro.jasper"]]></subreportExpression>
 				</subreport>
+				<line>
+					<reportElement uuid="a74780b9-7bdc-4944-a948-541d54be8225" x="0" y="59" width="555" height="1"/>
+				</line>
 			</frame>
 		</band>
 	</detail>
@@ -235,7 +238,7 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de "]]></textFieldExpression>
 				</textField>
 				<textField pattern="EEEEE dd MMMMM yyyy">
 					<reportElement uuid="78e96ecb-4eda-459b-ae1a-1518d4cb767b" style="Column header" x="22" y="1" width="197" height="20" forecolor="#736343"/>
