--- a/application/layouts/scripts/acesso.phtml
+++ b/application/layouts/scripts/acesso.phtml
@@ -1,4 +1,4 @@
-<html  xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html  xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt-br" lang="pt-br">
 <head>
     <meta http-equiv="content-type" 
 		content="text/html;charset=utf-8" />
