--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,4 +1,4 @@
-<html  xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html  xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt-br" lang="pt-br">
 <head>
     <meta http-equiv="content-type" 
 		content="text/html;charset=utf-8" />
@@ -14,7 +14,9 @@
 <?php echo $this->headTitle ();?>
 <?php echo $this->headLink ()->prependStylesheet ( $this->baseUrl () . '/extjs/resources/css/ext-all.css' );?>
 <?php echo $this->headLink ()->prependStylesheet ( $this->baseUrl () . '/css/application.css' );?>
-<?php  $this->headScript()->appendFile( $this->baseUrl () . '/javascripts/jsgantt.js') ?>
+ <?php echo $this->headLink ()->prependStylesheet ( $this->baseUrl ('/codebase/dhtmlxgantt.css') );?>
+<?php  //$this->headScript()->appendFile( $this->baseUrl () . '/javascripts/jsgantt.js') ?>
+<?php  $this->headScript()->appendFile( $this->baseUrl ('/codebase/dhtmlxgantt.js')) ?>
 <?php
 if(APPLICATION_ENV=='production'){
     $this->headScript()->appendFile( $this->baseUrl () . '/extjs/ext-all.js');
