--- a/application/modules/relatorio/views/scripts/index/geral.jrxml
+++ b/application/modules/relatorio/views/scripts/index/geral.jrxml
@@ -17,6 +17,7 @@
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["/scratch/webdev/observer/application/modules/relatorio/views/scripts/index/"]]></defaultValueExpression>
 	</parameter>
+	<parameter name="APPLICATION_PATH" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[with 	n1 as ( SELECT  p1.id AS p1_id, p1.singular as p1_singular, p1.has_responsavel as p1_has_responsavel, p1.has_supervisor as p1_has_supervisor, p1.has_equipe as p1_has_equipe, p1.menu as p1_menu, p1.descricao as p1_descricao, p1.ordem as p1_ordem, p1.programacao_id as p1_programacao_id, p1.equipe as p1_equipe, p1.responsavel as p1_responsavel, p1.supervisor as p1_supervisor, p1.instrumento_id as p1_instrumento_id
 	        FROM  vw_report_base p1 where p1.programacao_id is null and p1.instrumento_id=2),
@@ -66,37 +67,37 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 			<band height="48">
 				<printWhenExpression><![CDATA[$F{p1_id}!=null]]></printWhenExpression>
 				<frame>
-					<reportElement uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5" key="frame_grupo" style="grupo" mode="Opaque" x="2" y="0" width="555" height="46"/>
+					<reportElement key="frame_grupo" style="grupo" mode="Opaque" x="2" y="0" width="555" height="46" uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5"/>
 					<textField isStretchWithOverflow="true">
-						<reportElement uuid="ab7f1c6c-f283-43d2-ae49-e7cb58d2ab06" style="Detail" positionType="Float" x="1" y="0" width="551" height="15"/>
+						<reportElement style="Detail" positionType="Float" x="1" y="0" width="551" height="15" uuid="ab7f1c6c-f283-43d2-ae49-e7cb58d2ab06"/>
 						<textElement>
 							<font size="10" isBold="true" isUnderline="false"/>
 						</textElement>
 						<textFieldExpression><![CDATA[$F{p1_singular} + " - " + $F{p1_menu}]]></textFieldExpression>
 					</textField>
 					<textField isStretchWithOverflow="true">
-						<reportElement uuid="535cf34a-25f1-44ff-a670-822cee6fbaf7" style="Detail" positionType="Float" x="0" y="30" width="550" height="12"/>
+						<reportElement style="Detail" positionType="Float" x="0" y="30" width="550" height="12" uuid="535cf34a-25f1-44ff-a670-822cee6fbaf7"/>
 						<textElement markup="html">
 							<font size="8" isBold="false"/>
 						</textElement>
 						<textFieldExpression><![CDATA[$F{p1_descricao} != null ? "Descrição: " + $F{p1_descricao} :""]]></textFieldExpression>
 					</textField>
 					<textField isStretchWithOverflow="true">
-						<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" positionType="Float" x="373" y="17" width="166" height="12"/>
+						<reportElement style="Detail" positionType="Float" x="373" y="17" width="166" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
 						<textElement>
 							<font size="8"/>
 						</textElement>
 						<textFieldExpression><![CDATA[$F{p1_equipe} != null ? "Equipe: " + $F{p1_equipe} : ""]]></textFieldExpression>
 					</textField>
 					<textField>
-						<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" positionType="Float" x="0" y="17" width="188" height="12"/>
+						<reportElement style="Detail" positionType="Float" x="0" y="17" width="188" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
 						<textElement>
 							<font size="8"/>
 						</textElement>
 						<textFieldExpression><![CDATA[$F{p1_responsavel} != null ? "Responsável: " + $F{p1_responsavel} : ""]]></textFieldExpression>
 					</textField>
 					<textField>
-						<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" positionType="Float" x="188" y="17" width="185" height="12"/>
+						<reportElement style="Detail" positionType="Float" x="188" y="17" width="185" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
 						<textElement>
 							<font size="8"/>
 						</textElement>
@@ -114,9 +115,9 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 	</background>
 	<title>
 		<band height="30" splitType="Stretch">
-			<image>
-				<reportElement uuid="813c3241-f995-4c65-a596-0456db78a260" x="0" y="3" width="100" height="27"/>
-				<imageExpression><![CDATA["/scratch/webdev/observer/public/images/logo-mini.jpg"]]></imageExpression>
+			<image onErrorType="Blank">
+				<reportElement x="0" y="3" width="100" height="27" uuid="813c3241-f995-4c65-a596-0456db78a260"/>
+				<imageExpression><![CDATA[$P{APPLICATION_PATH} + "/../public/images/logo-mini.jpg"]]></imageExpression>
 			</image>
 		</band>
 	</title>
@@ -130,44 +131,44 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 		<band height="66" splitType="Stretch">
 			<printWhenExpression><![CDATA[$F{__detail_id} != null]]></printWhenExpression>
 			<frame>
-				<reportElement uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5" stretchType="RelativeToBandHeight" mode="Opaque" x="1" y="0" width="555" height="60"/>
+				<reportElement stretchType="RelativeToBandHeight" mode="Opaque" x="1" y="0" width="555" height="60" uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5"/>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="ab7f1c6c-f283-43d2-ae49-e7cb58d2ab06" style="Detail" positionType="Float" x="1" y="0" width="550" height="15"/>
+					<reportElement style="Detail" positionType="Float" x="1" y="0" width="550" height="15" uuid="ab7f1c6c-f283-43d2-ae49-e7cb58d2ab06"/>
 					<textElement>
 						<font size="10" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{__detail_singular} + " - " + $F{__detail_menu}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="535cf34a-25f1-44ff-a670-822cee6fbaf7" style="Detail" positionType="Float" x="0" y="27" width="551" height="12"/>
+					<reportElement style="Detail" positionType="Float" x="0" y="27" width="551" height="12" uuid="535cf34a-25f1-44ff-a670-822cee6fbaf7"/>
 					<textElement markup="html">
 						<font size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{__detail_descricao} != null ? "Descrição: " + $F{__detail_descricao} :""]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" positionType="Float" x="373" y="14" width="178" height="12"/>
+					<reportElement style="Detail" positionType="Float" x="373" y="14" width="178" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
 					<textElement>
 						<font size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{__detail_equipe} != null ? "Equipe: " + $F{__detail_equipe} : ""]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" positionType="Float" x="0" y="14" width="188" height="12"/>
+					<reportElement style="Detail" positionType="Float" x="0" y="14" width="188" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
 					<textElement>
 						<font size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{__detail_responsavel} != null ? "Responsável: " + $F{__detail_responsavel} : ""]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="731fd018-e852-453f-829e-5193458d2662" style="Detail" positionType="Float" x="188" y="15" width="185" height="12"/>
+					<reportElement style="Detail" positionType="Float" x="188" y="15" width="185" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
 					<textElement>
 						<font size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{__detail_supervisor} != null ? "Supervisor: " + $F{__detail_supervisor} : ""]]></textFieldExpression>
 				</textField>
 				<subreport runToBottom="false">
-					<reportElement uuid="0d2cbe1d-4c7a-4a49-b692-57c543f601f8" positionType="Float" x="3" y="42" width="548" height="14"/>
+					<reportElement positionType="Float" x="3" y="42" width="548" height="14" uuid="0d2cbe1d-4c7a-4a49-b692-57c543f601f8"/>
 					<subreportParameter name="programacao_id">
 						<subreportParameterExpression><![CDATA[$F{__detail_id}]]></subreportParameterExpression>
 					</subreportParameter>
@@ -175,7 +176,7 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 					<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "geral_financeiro.jasper"]]></subreportExpression>
 				</subreport>
 				<line>
-					<reportElement uuid="a74780b9-7bdc-4944-a948-541d54be8225" x="0" y="59" width="555" height="1"/>
+					<reportElement x="0" y="59" width="555" height="1" uuid="a74780b9-7bdc-4944-a948-541d54be8225"/>
 				</line>
 			</frame>
 		</band>
@@ -186,23 +187,23 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 	<pageFooter>
 		<band height="25" splitType="Stretch">
 			<frame>
-				<reportElement uuid="113d0c6a-9365-49bb-8b43-8fd8fd9fd51c" mode="Opaque" x="-21" y="1" width="597" height="24" forecolor="#D0B48E" backcolor="#F2EBDF"/>
+				<reportElement mode="Opaque" x="-21" y="1" width="597" height="24" forecolor="#D0B48E" backcolor="#F2EBDF" uuid="113d0c6a-9365-49bb-8b43-8fd8fd9fd51c"/>
 				<textField evaluationTime="Report">
-					<reportElement uuid="d4eb09fc-5d9d-4727-b7ca-dcbd93fb0ede" style="Column header" x="533" y="0" width="40" height="20" forecolor="#736343"/>
+					<reportElement style="Column header" x="533" y="0" width="40" height="20" forecolor="#736343" uuid="d4eb09fc-5d9d-4727-b7ca-dcbd93fb0ede"/>
 					<textElement verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="52330dd2-21e1-451b-9d3b-e36126d48203" style="Column header" x="453" y="0" width="80" height="20" forecolor="#736343"/>
+					<reportElement style="Column header" x="453" y="0" width="80" height="20" forecolor="#736343" uuid="52330dd2-21e1-451b-9d3b-e36126d48203"/>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de "]]></textFieldExpression>
 				</textField>
 				<textField pattern="EEEEE dd MMMMM yyyy">
-					<reportElement uuid="78e96ecb-4eda-459b-ae1a-1518d4cb767b" style="Column header" x="22" y="1" width="197" height="20" forecolor="#736343"/>
+					<reportElement style="Column header" x="22" y="1" width="197" height="20" forecolor="#736343" uuid="78e96ecb-4eda-459b-ae1a-1518d4cb767b"/>
 					<textElement verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
